Checkpoint Submission update1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!--Project 1-->
   <section class="flowspaceproject">
     <div class="flowspacemockup">
-    <img src="../images/mockup.png" alt="flowspace mockup">
+    <img src="../images/flowspacemockup.svg" alt="flowspace mockup">
   </div>
   <h3>FlOWSPACE</h3>
     <p>A more transparent cloud storage solution allowing users to have full control over the security of their files.</p>
