--- a/project1.html
+++ b/project1.html
@@ -26,7 +26,7 @@
             </div>
           </header>
           <div class="project hero">
-            <img src="../images/mockup.png">
+            <img src="../images/flowspacemockup.svg">
             <div class="button">
             <a href="https://www.figma.com/proto/nSRczBjdL1rIGC3aIa2fnl/Flowspace-Mockups?node-id=26%3A2&viewport=470%2C-104%2C0.018384581431746483&scaling=scale-down-width"><span class="buttonhighlight">View Prototype</span>
               <img src="../images/sidearrow.svg">
