--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Nikki Efstathiou | Portfolio</title>
   </head>
@@ -16,23 +16,23 @@
               <nav>
                 <div class="nav-wrapper">
                   <ul>
-                    <li><a href="index.html"><span class="buttonhighlight">home</span>
-                    <li><a href="about.html">about</li>
-                    <li><a href="resume.pdf">resume</li>
-                    <li><a href="contact.html">contact</li>
-                    </a>
+                    <li><a href="index.html"></a><span class="buttonhighlight">home</span></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="resume.pdf">resume</a></li>
+                    <li><a href="contact.html">contact</a></li>
                   </ul>
                 </div>
               </nav>
             </div>
+          </div>
           </header>
-          <img id="circle" src="../images/circleshape.svg">
-          <img id="triangle" src="../images/triangleshape.svg">
-          <img id="square" src="../images/squareline.svg">
-          <img id="diamond" src="../images/diamond.svg">
+          <img id="circle" src="../images/circleshape.svg" alt="circle">
+          <img id="triangle" src="../images/triangleshape.svg" alt="triangle">
+          <img id="square" src="../images/squareline.svg" alt="square">
+          <img id="diamond" src="../images/diamond.svg" alt="diamond">
       <div class="herotext">
         <h1>hello</h1>
-        <img src="../images/squiggle.svg">
+        <img src="../images/squiggle.svg" alt="squiggle">
         <h2>My name is Nikki Efstathiou</h2>
         <p class="abouttext">I'm a UX designer with a desire to create friendly experiences with the user in mind every step of the way.</p>
         <p class="featuredworktext">check out my work</p>
@@ -51,17 +51,16 @@
     <p>A more transparent cloud storage solution allowing users to have full control over the security of their files.</p>
     <div class="button">
     <a href="project1.html">View case study
-      <img src="../images/sidearrow.svg">
+      <img src="../images/sidearrow.svg" alt="buttonarrow">
     </a>
   </div>
-</div>
 </section>
 <!--Process-->
 <section class="process">
   <h2>My Process</h2>
   <div class="skill">
     <h3>Discovery & Research</h3>
-    <img src="../images/research.svg">
+    <img src="../images/research.svg" alt="Discovery & Research">
     <ul>
       <li>Competitive Analysis</li>
       <li>User Surveys</li>
@@ -71,7 +70,7 @@
 
   <div class="skill">
     <h3>Information Architecture</h3>
-    <img src="../images/IA.svg">
+    <img src="../images/IA.svg" alt="Information Architecture">
     <ul>
       <li>User Stories</li>
       <li>User Flows</li>
@@ -81,7 +80,7 @@
 
   <div class="skill">
     <h3>Visual Design</h3>
-    <img src="../images/visualdesign.svg">
+    <img src="../images/visualdesign.svg" alt="Visual Design">
     <ul>
       <li>Branding & Identity</li>
       <li>Style Guide</li>
@@ -91,7 +90,7 @@
 
   <div class="skill">
     <h3>User Testing</h3>
-    <img src="../images/testing.svg">
+    <img src="../images/testing.svg" alt="User testing">
     <ul>
       <li>Clickable Prototype</li>
       <li>Usability Testing</li>
@@ -100,7 +99,7 @@
 
   <div class="skill">
     <h3>Development</h3>
-    <img src="../images/development.svg">
+    <img src="../images/development.svg" alt="Development">
     <ul>
       <li>HTML / CSS</li>
       <li>Launch</li>
@@ -111,7 +110,7 @@
 <section class="testimonials">
   <h2>Testimonials</h2>
   <div>
-    <img src="../images/fillerphoto.svg">
+    <img src="../images/fillerphoto.svg" alt="Mike Dekker">
     <p class="testimonialname">Mike Dekker</p>
   </div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
@@ -123,13 +122,13 @@
   <h1>Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
-    <img src="../images/sidearrow.svg">
+    <img src="../images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
       <ul>
-        <li> <a href="mailto: naefstathiou@gmail.com"><img src="../images/mail.svg"></a></li>
-        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg"></a></li>
-        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg"></a></li>
+        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="email"></a></li>
+        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
+        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt=linkedin></a></li>
       </ul>
 </footer>
 
