--- a/project1.html
+++ b/project1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Flowspace Case Study</title>
   </head>
   <body>
-      <!-- hero unit -->
+    <!-- hero unit -->
     <div class="logo">
-      <section class="project hero">
+      <section class="hero">
         <header class="header">
           <a href="index.html" class="logo">
             <img src="../images/logosignature.svg" alt="logo">
@@ -16,27 +16,31 @@
               <nav>
                 <div class="nav-wrapper">
                   <ul>
-                    <li><a href="index.html">home</li>
-                    <li><a href="about.html">about</li>
-                    <li><a href="resume.pdf">resume</li>
-                    <li><a href="contact.html">contact</li>
+                    <li><a href="index.html"></a><span class="buttonhighlight">home</span></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="resume.pdf">resume</a></li>
+                    <li><a href="contact.html">contact</a></li>
                   </ul>
                 </div>
               </nav>
             </div>
+          </div>
           </header>
           <div class="project hero">
-            <img src="../images/flowspacemockup.svg">
+            <img src="../images/flowspacemockup.svg" alt="flowspace mockup">
             <div class="button">
             <a href="https://www.figma.com/proto/nSRczBjdL1rIGC3aIa2fnl/Flowspace-Mockups?node-id=26%3A2&viewport=470%2C-104%2C0.018384581431746483&scaling=scale-down-width"><span class="buttonhighlight">View Prototype</span>
-              <img src="../images/sidearrow.svg">
+              <img src="../images/sidearrow.svg" alt="buttonarrow">
             </a>
+          </div>
+        </div>
+    </section>
 <section class="projectintro">
-  <div class="project containter"</div>
+  <div class="project-containter">
     <p> With a plethora of cloud storage platforms being all viable options for users, Flowspace means to enter the space to create a more transparent cloud storage platform where users have full control over the security of their files while maintaining the simplicity they crave. I researched, branded, designed and prototyped Flowspace for my Bloc Designer Track project.</p>
   </div>
   </section>
-
+</div>
   <!--Roles/deliverables-->
 
 <section class="myroles">
@@ -77,11 +81,11 @@
     </section>
     <!--Problem/Solution-->
 <section class="problemsolution">
-  <div class="problem container">
+  <div class="problem-container">
     <h3>Problem</h3>
       <p>Most cloud storage platforms are not as focused on privacy and security as they should be. The majority are more focused on being a place that you can house your files, sharing those files and collaborating on documents. Some have options for security, but these can only be unlocked with further payments which include features the user may not even need, but are forced to pay for in order to feel secure.</p>
     </div>
-      <div class="solution container">
+      <div class="solution-container">
         <h3>Solution</h3>
           <p>With an emphasis on transparency and control for users, Flowspace allows users to not only do the basics of what is needed in a cloud storage app, such as uploading and saving files, sharing, collaborating, and creating documents, but also offers full control and transparency over the files they have shared on an indiviudal level. All of these features are included in the free version, so users will only need to purchase a plan in order to have more storage space, but with a generous 10GB of free storage offered from the beginning, users will be enticed to join.</p>
         </div>
@@ -90,23 +94,24 @@
 <section class="section">
   <div class="centered">
     <h1 class="casestudyheader">discovery & research</h1>
-      <img class=casestudyimage src="../images/research.svg">
+      <img class=casestudyimage src="../images/research.svg" alt="Discovery & Research">
   </div>
 </section>
   <!--competitive analysis-->
-<section class="competitive analysis">
-  <div class="competitive container">
+<section class="competitive-analysis">
+  <div class="competitive-container">
     <h3><span class="pinkunderline">competitive analysis</span></h3>
       <p> I chose 3 popular cloud storage apps to perform a competitive analysis: Google Drive, DropBox, and Box to see where a new cloud storage application could enter the market and thrive. My findings indicated that there was a need for more control over sharing and security as they either were not available or only available on paid versions. Additionally, having something that is suited for both individuals and companies.</p>
         <div class="competitionlogos">
-          <img src="../images/googledrive.png">
-          <img src="../images/box.png">
-          <img src="../images/dropbox.png">
+          <img src="../images/googledrive.png" alt="Google Drive">
+          <img src="../images/box.png" alt="box">
+          <img src="../images/dropbox.png" alt="Dropbox">
         </div>
+      </div>
     </section>
       <!--user research-->
 <section class="user Research">
-  <div class="user research container">
+  <div class="user-research-container">
     <h3><span class="pinkunderline">user research</span></h3>
       <p> After scoping out the competition, I conducted a user survey to find out the common habits and pain points of cloud storage users.</p>
         <div class="result">
@@ -133,6 +138,7 @@
                     <h2 class=percentage>80%</h2>
                       <p class=centeredresults> said simplicity is very important to them</p>
                   </div>
+                </div>
             </section>
 
 <section class="user personas">
@@ -140,16 +146,17 @@
     <h3><span class="pinkunderline">user personas</span></h3>
       <div class=persona1>
         <h3 class=centered>Ronald C.</h3>
-          <img src="../images/ronaldc.svg">
+          <img src="../images/ronaldc.svg" alt="Ronald">
             <h3 class=centered>Goals</h3>
               <p>Collaboration</p>
               <p>Create and share files</p>
             <h3 class=centered>Frustrations</h3>
               <p>Security</p>
           </div>
+        </div>
     <div class="persona2">
       <h3 class=centered>Kaela S.</h3>
-        <img src="../images/kaelas.svg">
+        <img src="../images/kaelas.svg" alt="Kaela">
           <h3 class=centered>Goals</h3>
             <p>Collaboration</p>
             <p>Create and share files</p>
@@ -158,14 +165,15 @@
     </div>
     <div class="button">
       <a href="https://drive.google.com/file/d/1bfKbyXNFjrIQJokcmbPojVt7sAB9dQhr/view?usp=sharing"><span class="buttonhighlight">View Personas</span>
-        <img src="../images/sidearrow.svg">
+        <img src="../images/sidearrow.svg" alt="buttonarrow">
       </a>
     </div>
+  </section>
       <!--Information Architecture-->
 <section class="section">
   <div class="centered">
     <h1 class="casestudyheader">information architecture</h1>
-      <img class=casestudyimage src="../images/IA.svg">
+      <img class=casestudyimage src="../images/IA.svg" alt="Information Architecture">
   </div>
 </section>
 <section class="userflows">
@@ -176,11 +184,11 @@
       <p>Security: The ability to view the files you have shared and edit those share permissions at an individual user level.<br>Collaboration: The ability to comment on files and tag people for visibility<br>Storage: 10GB of free storage just for signing up.<br>Expense: All features are available in the free version. Users don’t have to pay more for features, only if they need more storage.</p>
     </div>
     <div class="userflowimage">
-      <img src="../images/userflows.png">
+      <img src="../images/userflows.png" alt="User Flow">
     </div>
     <div class="button">
       <a href="https://whimsical.com/YK2dbDoAyvMwLvEDd1xdZZ"><span class="buttonhighlight">View Flows</span>
-        <img src="../images/sidearrow.svg">
+        <img src="../images/sidearrow.svg" alt="buttonarrow">
       </a>
     </div>
   </section>
@@ -188,7 +196,7 @@
     <div class="sketchesandwireframes">
       <h3><span class="pinkunderline">sketches & wireframes</span></h3>
         <p>When creating the wireframes for this project,  I wanted to create something to make sure that it was familiar enough that it would be easily acclimated to based on users use of other cloud storage apps used by most of my users (Google Drive, Dropbox).</p>
-          <img src="../images/wireframesketches.svg">
+          <img src="../images/wireframesketches.svg" alt="wireframe sketches">
     </div>
   </section>
 <section class="usability test1">
@@ -204,14 +212,14 @@
   </div>
     <div class="container usability test1 analysis">
       <p>There was consistent confusion when it came to the hover buttons for share, download, and move file. Users were unable to find them and wanted to go to the vertical dots that many people know as an indicator for ‘options’. In my next iteration, I chose to place those options under the vertical dots and remove the hover buttons all together.</p>
-        <img src="../images/wireframeupdate.svg">
+        <img src="../images/wireframeupdate.svg" alt="Wireframe update">
    </div>
 </section>
   <!--Visual Design-->
   <section class="section">
     <div class="centered">
       <h1 class="casestudyheader">visual design</h1>
-        <img class=casestudyimage src="../images/visualdesign.svg">
+        <img class=casestudyimage src="../images/visualdesign.svg" alt="Visual Design">
     </div>
   </section>
     <section class="branding">
@@ -221,34 +229,34 @@
           <p>Entering flow is when  the mental state of operation in which a person performing an activity is fully immersed in a feeling of energized focus, full involvement, and enjoyment in the process of the activity.</p>
           <p>The idea is to melt this concept into a cloud storage service where all of your important files are in one place and are easily organizable to make sure you have everything you need to collaborate, share, and create in either a personal or professional manner.</p>
         <h3 class="subtitle">Logo Sketches & Concepts</h3>
-            <img src="../images/logosketches.svg">
+            <img src="../images/logosketches.svg" alt="logo sketches">
           <p>I drew up some images that made me think of the word ‘flow’, and eventually came up with this sort of melting down an icon concept.</p>
           <p>Once this was drawn out and the feeling that I wanted Flowspace to evoke was chosen, I got to work choosing a color palette that I thought would help express those emotions further.</p>
           <p>I had originally wanted to use a very minimalistic look when it came to the logo, starting with this black and white version, but seeing it in digital form, I decided it needed a bit more.</p>
-            <img src="../images/digitalsketches.svg">
+            <img src="../images/digitalsketches.svg" alt="digital logo sketches">
       <div class="color logos">
-            <img src="../images/digitallogosketchescolor.svg">
+            <img src="../images/digitallogosketchescolor.svg" alt="digital color logos">
           </div>
         <h3 class="subtitle">Style Guide</h3>
           <p>I chose to use the darker blue as a brand color because it symbolizes intelligence and trust while the lighter coral and aqua give an inviting, friendly vibe. The coral color is a pop of color that is fun and energetic, like entering a “flow state” can be. I believe the fonts are soft and playful which add to this effect. I chose to use the same fonts together instead of the previous ‘basic’ font as the brand font because once I tried it out, they seemed to mesh well together and look different enough when changing weight and size, although they are technically the same.</p>
-            <img src="../images/styleguide.svg">
+            <img src="../images/styleguide.svg" alt="Style Guide">
       </div>
           <div class="button">
             <a href="styleguide.pdf"><span class="buttonhighlight">View style guide</span>
-              <img src="../images/sidearrow.svg">
+              <img src="../images/sidearrow.svg" alt="buttonarrow">
             </a>
           </div>
   </section>
 <section class="hifi">
   <div class="container hifi">
-    <h3 class="subtitle">Flowspace Homepage<h3>
-      <img src="../images/flowspacemockupshome.svg">
-        <h3 class="subtitle">Flowspace Dashboard<h3>
-          <img src="../images/hifimockups.svg">
+    <h3 class="subtitle">Flowspace Homepage</h3>
+      <img src="../images/flowspacemockupshome.svg" alt="Homepage Mockups">
+        <h3 class="subtitle">Flowspace Dashboard</h3>
+          <img src="../images/hifimockups.svg" alt="Dashboard Mockups">
     </div>
   <div class="button">
       <a href="https://www.figma.com/proto/nSRczBjdL1rIGC3aIa2fnl/Flowspace-Mockups?node-id=26%3A2&viewport=470%2C-104%2C0.018384581431746483&scaling=scale-down-width"><span class="buttonhighlight">View Prototype</span>
-        <img src="../images/sidearrow.svg">
+        <img src="../images/sidearrow.svg" alt="buttonarrow">
       </a>
   </div>
 </section>
@@ -256,11 +264,11 @@
 <section class="section">
   <div class="centered">
     <h1 class="casestudyheader">User Testing</h1>
-      <img class=casestudyimage src="../images/testing.svg">
+      <img class=casestudyimage src="../images/testing.svg" alt="User Testing">
   </div>
 </section>
-<section class="usability test2">
-  <div class="container usability test2">
+<section class="usability-test2">
+  <div class="container-usability-test2">
     <h3><span class="pinkunderline">usability test #2</span></h3>
       <p>I did 3 separate usability tests to test my users completing 5 tasks:</p>
         <ol>
@@ -271,18 +279,22 @@
           <li> Change a user’s permissions on a file that you have shared previously to ‘edit only’, then delete them</li>
         </ol>
   </div>
-    <div class="container usability test2 analysis">
+    <div class="container-usability-test2-analysis">
       <p>Analyzing the feedback from my users, I had a few consistencies reported that I decided to implement and tweak in the final product. One of the most important, was creating a tour to give users a warm welcome into Flowspace.</p>
    </div>
    <div class="video">
      <video width="640" height="480" controls>
     <source src="../videos/tour.mov">
     </video>
+  </div>
 </section>
+
 <section class="section">
   <div class="centered">
     <h1 class="casestudyheader">Conclusion</h1>
+  </div>
 </section>
+
 <section class="conclusion">
   <div class="container conclusion">
     <h3 class="subtitle"> Breaking down the problem</h3>
@@ -296,13 +308,13 @@
   <h1>Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
-    <img src="../images/sidearrow.svg">
+    <img src="../images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
       <ul>
-        <li> <a href="mailto: naefstathiou@gmail.com"><img src="../images/mail.svg"></a></li>
-        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg"></a></li>
-        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg"></a></li>
+        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="mail"></a></li>
+        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
+        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt="linkedin"></a></li>
       </ul>
 </footer>
 
