--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <title>Nikki Efstathiou | Portfolio</title>
+    <link rel="stylesheet" href="../CSS/reset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
   </head>
   <body>
     <!-- hero unit -->
-    <div class="logo">
+    <div class="wrapper">
       <section class="hero">
         <header class="header">
           <a href="index.html" class="logo">
@@ -26,19 +28,26 @@
             </div>
           </div>
           </header>
-          <img id="circle" src="../images/circleshape.svg" alt="circle">
-          <img id="triangle" src="../images/triangleshape.svg" alt="triangle">
-          <img id="square" src="../images/squareline.svg" alt="square">
-          <img id="diamond" src="../images/diamond.svg" alt="diamond">
-      <div class="herotext">
-        <h1>hello</h1>
-        <img src="../images/squiggle.svg" alt="squiggle">
-        <h2>My name is Nikki Efstathiou</h2>
-        <p class="abouttext">I'm a UX designer with a desire to create friendly experiences with the user in mind every step of the way.</p>
-        <p class="featuredworktext">check out my work</p>
+      <div class="circle">
+          <img src="../images/circleshape.svg" alt="circle">
       </div>
-
+          <div class="triangle">
+            <img src="../images/triangleshape.svg" alt="triangle">
+          </div>
+          <div class="square">
+            <img src="../images/squareline.svg" alt="square">
+          </div>
+          <div class="diamond">
+            <img src="../images/diamond.svg" alt="diamond">
+          </div>
+      <div class="herotext">
+        <h1>hello!</h1>
+        <img class="squiggle" src="../images/squiggle.svg" alt="squiggle">
+        <h2 class="name">My name is Nikki Efstathiou</h2>
+        <p class="abouttext">I'm a UX designer living in Los Angeles with a desire to create friendly experiences with the user in mind every step of the way.</p>
+      </div>
       <div class="downarrow">
+        <p class="featuredworktext">check out my work</p>
       <img src="../images/bluearrow.svg" alt="downarrow">
     </div>
   </section>
@@ -47,19 +56,23 @@
     <div class="flowspacemockup">
     <img src="../images/flowspacemockup.svg" alt="flowspace mockup">
   </div>
-  <h3>FlOWSPACE</h3>
+  <div class="projecttext">
+  <h3>FLOWSPACE</h3>
+  <div class="projectcontent">
     <p>A more transparent cloud storage solution allowing users to have full control over the security of their files.</p>
+  </div>
     <div class="button">
     <a href="project1.html">View case study
       <img src="../images/sidearrow.svg" alt="buttonarrow">
     </a>
   </div>
+</div>
 </section>
 <!--Process-->
-<section class="process">
+<section id="process">
   <h2>My Process</h2>
   <div class="skill">
-    <h3>Discovery & Research</h3>
+    <h4>Discovery & Research</h4>
     <img src="../images/research.svg" alt="Discovery & Research">
     <ul>
       <li>Competitive Analysis</li>
@@ -69,7 +82,7 @@
   </div>
 
   <div class="skill">
-    <h3>Information Architecture</h3>
+    <h4>Information Architecture</h4>
     <img src="../images/IA.svg" alt="Information Architecture">
     <ul>
       <li>User Stories</li>
@@ -79,7 +92,7 @@
   </div>
 
   <div class="skill">
-    <h3>Visual Design</h3>
+    <h4>Visual Design</h4>
     <img src="../images/visualdesign.svg" alt="Visual Design">
     <ul>
       <li>Branding & Identity</li>
@@ -89,7 +102,7 @@
   </div>
 
   <div class="skill">
-    <h3>User Testing</h3>
+    <h4>User Testing</h4>
     <img src="../images/testing.svg" alt="User testing">
     <ul>
       <li>Clickable Prototype</li>
@@ -98,7 +111,7 @@
   </div>
 
   <div class="skill">
-    <h3>Development</h3>
+    <h4>Development</h4>
     <img src="../images/development.svg" alt="Development">
     <ul>
       <li>HTML / CSS</li>
@@ -115,7 +128,7 @@
   </div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
   </section>
-</div>
+
 
 <!--Footer-->
 <footer>
@@ -131,6 +144,6 @@
         <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt=linkedin></a></li>
       </ul>
 </footer>
-
+</div>
   </body>
 </html>
