--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Nikki Efstathiou | Portfolio</title>
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/reset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
   </head>
   <body>
     <!-- hero unit -->
@@ -73,7 +73,9 @@
   <h2>My Process</h2>
   <div class="skill">
     <h4>Discovery & Research</h4>
+    <div class="image">
     <img src="../images/research.svg" alt="Discovery & Research">
+  </div>
     <ul>
       <li>Competitive Analysis</li>
       <li>User Surveys</li>
@@ -83,7 +85,9 @@
 
   <div class="skill">
     <h4>Information Architecture</h4>
+    <div class="image">
     <img src="../images/IA.svg" alt="Information Architecture">
+  </div>
     <ul>
       <li>User Stories</li>
       <li>User Flows</li>
@@ -93,7 +97,9 @@
 
   <div class="skill">
     <h4>Visual Design</h4>
-    <img src="../images/visualdesign.svg" alt="Visual Design">
+      <div class="image">
+        <img src="../images/visualdesign.svg" alt="Visual Design">
+      </div>
     <ul>
       <li>Branding & Identity</li>
       <li>Style Guide</li>
@@ -103,7 +109,9 @@
 
   <div class="skill">
     <h4>User Testing</h4>
+    <div class="image">
     <img src="../images/testing.svg" alt="User testing">
+  </div>
     <ul>
       <li>Clickable Prototype</li>
       <li>Usability Testing</li>
@@ -112,7 +120,9 @@
 
   <div class="skill">
     <h4>Development</h4>
+    <div class="image">
     <img src="../images/development.svg" alt="Development">
+  </div>
     <ul>
       <li>HTML / CSS</li>
       <li>Launch</li>
@@ -122,7 +132,7 @@
 <!--Testimonials-->
 <section class="testimonials">
   <h2>Testimonials</h2>
-  <div>
+  <div class= "phototestimonial">
     <img src="../images/fillerphoto.svg" alt="Mike Dekker">
     <p class="testimonialname">Mike Dekker</p>
   </div>
@@ -132,7 +142,7 @@
 
 <!--Footer-->
 <footer>
-  <h1>Let's work together!</h1>
+  <h1 class="footertext">Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
     <img src="../images/sidearrow.svg" alt="buttonarrow">
