--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <nav>
                 <div class="nav-wrapper">
                   <ul>
-                    <li><a href="index.html"></a><span class="buttonhighlight">home</span></li>
+                    <li><a href="index.html"></a><img class="homehighlight" src="../images/homegreen.svg">home</li>
                     <li><a href="about.html">about</a></li>
                     <li><a href="resume.pdf">resume</a></li>
                     <li><a href="contact.html">contact</a></li>
@@ -43,8 +43,12 @@
       <div class="herotext">
         <h1>hello!</h1>
         <img class="squiggle" src="../images/squiggle.svg" alt="squiggle">
-        <h2 class="name">My name is Nikki Efstathiou</h2>
-        <p class="abouttext">I'm a UX designer living in Los Angeles with a desire to create friendly experiences with the user in mind every step of the way.</p>
+        <h2 class="name">My name is Nikki Efstathiou
+          <img class="nikkihighlight" src="../images/nikkihighlight.svg">
+        </h2>
+        <p class="abouttext">I'm a UX designer living in Los Angeles with a desire to create <span class="friendly">friendly</span> experiences with the user in mind every step of the way.
+          <img class="friendlyhighlight" src="../images/friendlyhighlight.svg">
+        </p>
       </div>
       <div class="downarrow">
         <p class="featuredworktext">check out my work</p>
@@ -63,14 +67,18 @@
   </div>
     <div class="button">
     <a href="project1.html">View case study
+      <img class="buttonhighlight" src="../images/buttonhighlight.svg">
+    <div class="buttonarrow">
       <img src="../images/sidearrow.svg" alt="buttonarrow">
     </a>
+  </div>
   </div>
 </div>
 </section>
 <!--Process-->
 <section id="process">
   <h2>My Process</h2>
+  <div class="processcontainer">
   <div class="skill">
     <h4>Discovery & Research</h4>
     <div class="image">
@@ -82,7 +90,7 @@
       <li>User personas</li>
     </ul>
   </div>
-
+ <img class ="dots" src="../images/dots.svg">
   <div class="skill">
     <h4>Information Architecture</h4>
     <div class="image">
@@ -94,7 +102,7 @@
       <li>Wireframing</li>
     </ul>
   </div>
-
+ <img class ="dots" src="../images/dots.svg">
   <div class="skill">
     <h4>Visual Design</h4>
       <div class="image">
@@ -106,7 +114,7 @@
       <li>High Fidelity Mock Ups</li>
     </ul>
   </div>
-
+ <img class= "dots" src="../images/dots.svg">
   <div class="skill">
     <h4>User Testing</h4>
     <div class="image">
@@ -117,7 +125,7 @@
       <li>Usability Testing</li>
     </ul>
   </div>
-
+ <img class ="dots" src="../images/dots.svg">
   <div class="skill">
     <h4>Development</h4>
     <div class="image">
@@ -128,10 +136,12 @@
       <li>Launch</li>
     </ul>
   </div>
+</div>
+  <img class="processarrow" src="../images/processarrow.svg">
 </section>
 <!--Testimonials-->
-<section class="testimonials">
   <h2>Testimonials</h2>
+<section class="testimonials">
   <div class= "phototestimonial">
     <img src="../images/fillerphoto.svg" alt="Mike Dekker">
     <p class="testimonialname">Mike Dekker</p>
@@ -142,17 +152,21 @@
 
 <!--Footer-->
 <footer>
+  <div class="contacttext">
   <h1 class="footertext">Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
     <img src="../images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
+</div>
+<div class="contacticons">
       <ul>
-        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="email"></a></li>
         <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
+        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="email"></a></li>
         <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt=linkedin></a></li>
       </ul>
+    </div>
 </footer>
 </div>
   </body>
